packages/goo2d_ffi_box2d/src/goo_box2d.h

	/// Drains this step's contact (non-sensor) touch transitions.
	///
	/// `shapeA`/`shapeB` are packed shape handles. Events beyond `maxEvents`
	/// are **dropped**, and the caller is expected to size its buffer from
	/// the previous tick's return value rather than have this grow one.
	GOO_API int32_t gooWorldDrainContacts( int64_t world, int64_t* out, int32_t maxEvents );
	/// Drains this step's sensor touch transitions. `shapeA` is the sensor,
	/// `shapeB` the visitor - an order Box2D itself guarantees, which is what
	/// lets goo2d report a trigger event without asking which side was which.
	GOO_API int32_t gooWorldDrainSensors( int64_t world, int64_t* out, int32_t maxEvents );
	/// How many contact and sensor records the last step produced, whether or
	/// not they fitted in the buffer. Lets a caller resize *after* a drain
	/// that overflowed rather than guessing up front.
	GOO_API int32_t gooWorldContactEventCount( int64_t world );
	GOO_API int32_t gooWorldSensorEventCount( int64_t world );
	// --- joints ------------------------------------------------------------
	//
	// Anchors are in each body's **local** space, which is Box2D's own
	// convention and the only one that is unambiguous: a world-space anchor
	// only means anything at the instant the joint is created, and a caller
	// who moved a body first would get a joint attached somewhere it did not
	// intend with nothing to indicate it.
	//
	// Flags are int32 0/1 rather than bool - the shim exposes no C `bool`, so
	// nothing here depends on `_Bool` having the same width as Dart expects.
	//
	// A joint is destroyed automatically when either of its bodies is, so a
	// handle held across a body's destruction goes stale; `gooJointIsValid`
	// is how to ask.

	/// Creates a distance joint - two points held a fixed distance apart, with
	/// an optional spring and optional length limits. Ropes, springs,
	/// suspension.
	///
	/// Returns the packed joint handle, or 0 if either body was invalid.
	GOO_API int64_t gooJointCreateDistance( int64_t bodyA, int64_t bodyB, float ax, float ay, float bx,
											float by, float length, int32_t enableSpring, float hertz,
											float dampingRatio, int32_t enableLimit, float minLength,
											float maxLength, int32_t collideConnected );
	/// Creates a revolute joint - two bodies sharing a pivot, with optional
	/// angle limits and an optional motor. Hinges, wheels, ragdoll elbows.
	GOO_API int64_t gooJointCreateRevolute( int64_t bodyA, int64_t bodyB, float ax, float ay, float bx,
											float by, float referenceAngle, int32_t enableLimit,
											float lowerAngle, float upperAngle, int32_t enableMotor,
											float motorSpeed, float maxMotorTorque, int32_t collideConnected );
	/// Creates a prismatic joint - two bodies sharing one axis of translation,
	/// with optional limits and an optional motor. Unity calls this a Slider
	/// Joint 2D. Lifts, sliding doors, pistons.
	///
	/// `(axisX, axisY)` is the free axis in **body A's local frame**.
	GOO_API int64_t gooJointCreatePrismatic( int64_t bodyA, int64_t bodyB, float ax, float ay, float bx,
											 float by, float axisX, float axisY, float referenceAngle,
											 int32_t enableLimit, float lower, float upper,
											 int32_t enableMotor, float motorSpeed, float maxMotorForce,
											 int32_t collideConnected );
	/// Creates a weld joint - two bodies held rigidly together, optionally with
	/// spring give. Unity calls this a Fixed Joint 2D. Breakable structures,
	/// stuck-together debris.
	///
	/// A hertz of 0 on either axis is a rigid weld; above 0 it is a soft one.
	GOO_API int64_t gooJointCreateWeld( int64_t bodyA, int64_t bodyB, float ax, float ay, float bx,
										float by, float referenceAngle, float linearHertz,
										float linearDampingRatio, float angularHertz,
										float angularDampingRatio, int32_t collideConnected );
	/// Creates a wheel joint - a suspension axis plus a spin. Unity calls this
	/// a Wheel Joint 2D, and it is what a driven vehicle wheel is.
	GOO_API int64_t gooJointCreateWheel( int64_t bodyA, int64_t bodyB, float ax, float ay, float bx,
										 float by, float axisX, float axisY, int32_t enableSpring,
										 float hertz, float dampingRatio, int32_t enableLimit,
										 float lower, float upper, int32_t enableMotor,
										 float motorSpeed, float maxMotorTorque,
										 int32_t collideConnected );
	/// Creates a motor joint - drives body B to a position and angle relative
	/// to body A. Unity splits this into Relative Joint 2D (drive to an offset)
	/// and Friction Joint 2D (drive to *no* motion, which is what a zero
	/// target with a force cap is).
	GOO_API int64_t gooJointCreateMotor( int64_t bodyA, int64_t bodyB, float offsetX, float offsetY,
										 float angularOffset, float maxForce, float maxTorque,
										 float correctionFactor, int32_t collideConnected );
	/// Creates a mouse joint - drags body B towards a world-space target.
	/// Unity calls this a Target Joint 2D. Mouse dragging, tractor beams.
	///
	/// The target is world space, not body-local, because that is the whole
	/// point: it is where you want the body to go, not a point on it.
	GOO_API int64_t gooJointCreateMouse( int64_t bodyA, int64_t bodyB, float targetX, float targetY,
										 float hertz, float dampingRatio, float maxForce,
										 int32_t collideConnected );