packages/goo2d_ffi_box2d/lib/src/box2d.g.dart


  late final _gooWorldDrainContactsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int64, ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('gooWorldDrainContacts');
  late final _gooWorldDrainContacts = _gooWorldDrainContactsPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int64>, int)>();

  /// Drains this step's sensor touch transitions. `shapeA` is the sensor,
  /// `shapeB` the visitor - an order Box2D itself guarantees, which is what
  /// lets goo2d report a trigger event without asking which side was which.
  int gooWorldDrainSensors(
    int world,
    ffi.Pointer<ffi.Int64> out,
    int maxEvents,
  ) {
    return _gooWorldDrainSensors(
      world,
      out,
      maxEvents,
    );
  }

  late final _gooWorldDrainSensorsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Int64, ffi.Pointer<ffi.Int64>,
              ffi.Int32)>>('gooWorldDrainSensors');
  late final _gooWorldDrainSensors = _gooWorldDrainSensorsPtr
      .asFunction<int Function(int, ffi.Pointer<ffi.Int64>, int)>();

  /// How many contact and sensor records the last step produced, whether or
  /// not they fitted in the buffer. Lets a caller resize *after* a drain
  /// that overflowed rather than guessing up front.
  int gooWorldContactEventCount(
    int world,
  ) {
    return _gooWorldContactEventCount(
      world,
    );
  }

  late final _gooWorldContactEventCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooWorldContactEventCount');
  late final _gooWorldContactEventCount =
      _gooWorldContactEventCountPtr.asFunction<int Function(int)>();

  int gooWorldSensorEventCount(
    int world,
  ) {
    return _gooWorldSensorEventCount(
      world,
    );
  }

  late final _gooWorldSensorEventCountPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Int64)>>(
          'gooWorldSensorEventCount');
  late final _gooWorldSensorEventCount =
      _gooWorldSensorEventCountPtr.asFunction<int Function(int)>();

  /// Creates a distance joint - two points held a fixed distance apart, with
  /// an optional spring and optional length limits. Ropes, springs,
  /// suspension.
  ///
  /// Returns the packed joint handle, or 0 if either body was invalid.
  int gooJointCreateDistance(
    int bodyA,
    int bodyB,
    double ax,
    double ay,
    double bx,
    double by,
    double length,
    int enableSpring,
    double hertz,
    double dampingRatio,
    int enableLimit,
    double minLength,
    double maxLength,
    int collideConnected,
  ) {
    return _gooJointCreateDistance(
      bodyA,
      bodyB,
      ax,
      ay,
      bx,
      by,
      length,
      enableSpring,
      hertz,
      dampingRatio,
      enableLimit,
      minLength,
      maxLength,
      collideConnected,
    );
  }

  late final _gooJointCreateDistancePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateDistance');
  late final _gooJointCreateDistance = _gooJointCreateDistancePtr.asFunction<
      int Function(int, int, double, double, double, double, double, int,
          double, double, int, double, double, int)>();

  /// Creates a revolute joint - two bodies sharing a pivot, with optional
  /// angle limits and an optional motor. Hinges, wheels, ragdoll elbows.
  int gooJointCreateRevolute(
    int bodyA,
    int bodyB,
    double ax,
    double ay,
    double bx,
    double by,
    double referenceAngle,
    int enableLimit,
    double lowerAngle,
    double upperAngle,
    int enableMotor,
    double motorSpeed,
    double maxMotorTorque,
    int collideConnected,
  ) {
    return _gooJointCreateRevolute(
      bodyA,
      bodyB,
      ax,
      ay,
      bx,
      by,
      referenceAngle,
      enableLimit,
      lowerAngle,
      upperAngle,
      enableMotor,
      motorSpeed,
      maxMotorTorque,
      collideConnected,
    );
  }

  late final _gooJointCreateRevolutePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateRevolute');
  late final _gooJointCreateRevolute = _gooJointCreateRevolutePtr.asFunction<
      int Function(int, int, double, double, double, double, double, int,
          double, double, int, double, double, int)>();

  /// Creates a prismatic joint - two bodies sharing one axis of translation,
  /// with optional limits and an optional motor. Unity calls this a Slider
  /// Joint 2D. Lifts, sliding doors, pistons.
  ///
  /// `(axisX, axisY)` is the free axis in **body A's local frame**.
  int gooJointCreatePrismatic(
    int bodyA,
    int bodyB,
    double ax,
    double ay,
    double bx,
    double by,
    double axisX,
    double axisY,
    double referenceAngle,
    int enableLimit,
    double lower,
    double upper,
    int enableMotor,
    double motorSpeed,
    double maxMotorForce,
    int collideConnected,
  ) {
    return _gooJointCreatePrismatic(
      bodyA,
      bodyB,
      ax,
      ay,
      bx,
      by,
      axisX,
      axisY,
      referenceAngle,
      enableLimit,
      lower,
      upper,
      enableMotor,
      motorSpeed,
      maxMotorForce,
      collideConnected,
    );
  }

  late final _gooJointCreatePrismaticPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreatePrismatic');
  late final _gooJointCreatePrismatic = _gooJointCreatePrismaticPtr.asFunction<
      int Function(int, int, double, double, double, double, double, double,
          double, int, double, double, int, double, double, int)>();

  /// Creates a weld joint - two bodies held rigidly together, optionally with
  /// spring give. Unity calls this a Fixed Joint 2D. Breakable structures,
  /// stuck-together debris.
  ///
  /// A hertz of 0 on either axis is a rigid weld; above 0 it is a soft one.
  int gooJointCreateWeld(
    int bodyA,
    int bodyB,
    double ax,
    double ay,
    double bx,
    double by,
    double referenceAngle,
    double linearHertz,
    double linearDampingRatio,
    double angularHertz,
    double angularDampingRatio,
    int collideConnected,
  ) {
    return _gooJointCreateWeld(
      bodyA,
      bodyB,
      ax,
      ay,
      bx,
      by,
      referenceAngle,
      linearHertz,
      linearDampingRatio,
      angularHertz,
      angularDampingRatio,
      collideConnected,
    );
  }

  late final _gooJointCreateWeldPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateWeld');
  late final _gooJointCreateWeld = _gooJointCreateWeldPtr.asFunction<
      int Function(int, int, double, double, double, double, double, double,
          double, double, double, int)>();

  /// Creates a wheel joint - a suspension axis plus a spin. Unity calls this
  /// a Wheel Joint 2D, and it is what a driven vehicle wheel is.
  int gooJointCreateWheel(
    int bodyA,
    int bodyB,
    double ax,
    double ay,
    double bx,
    double by,
    double axisX,
    double axisY,
    int enableSpring,
    double hertz,
    double dampingRatio,
    int enableLimit,
    double lower,
    double upper,
    int enableMotor,
    double motorSpeed,
    double maxMotorTorque,
    int collideConnected,
  ) {
    return _gooJointCreateWheel(
      bodyA,
      bodyB,
      ax,
      ay,
      bx,
      by,
      axisX,
      axisY,
      enableSpring,
      hertz,
      dampingRatio,
      enableLimit,
      lower,
      upper,
      enableMotor,
      motorSpeed,
      maxMotorTorque,
      collideConnected,
    );
  }

  late final _gooJointCreateWheelPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateWheel');
  late final _gooJointCreateWheel = _gooJointCreateWheelPtr.asFunction<
      int Function(
          int,
          int,
          double,
          double,
          double,
          double,
          double,
          double,
          int,
          double,
          double,
          int,
          double,
          double,
          int,
          double,
          double,
          int)>();

  /// Creates a motor joint - drives body B to a position and angle relative
  /// to body A. Unity splits this into Relative Joint 2D (drive to an offset)
  /// and Friction Joint 2D (drive to *no* motion, which is what a zero
  /// target with a force cap is).
  int gooJointCreateMotor(
    int bodyA,
    int bodyB,
    double offsetX,
    double offsetY,
    double angularOffset,
    double maxForce,
    double maxTorque,
    double correctionFactor,
    int collideConnected,
  ) {
    return _gooJointCreateMotor(
      bodyA,
      bodyB,
      offsetX,
      offsetY,
      angularOffset,
      maxForce,
      maxTorque,
      correctionFactor,
      collideConnected,
    );
  }

  late final _gooJointCreateMotorPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int64 Function(
              ffi.Int64,
              ffi.Int64,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Float,
              ffi.Int32)>>('gooJointCreateMotor');
  late final _gooJointCreateMotor = _gooJointCreateMotorPtr.asFunction<
      int Function(
          int, int, double, double, double, double, double, double, int)>();

  /// Creates a mouse joint - drags body B towards a world-space target.
  /// Unity calls this a Target Joint 2D. Mouse dragging, tractor beams.
  ///
  /// The target is world space, not body-local, because that is the whole
  /// point: it is where you want the body to go, not a point on it.
  int gooJointCreateMouse(
    int bodyA,
    int bodyB,
    double targetX,
    double targetY,
    double hertz,
    double dampingRatio,
    double maxForce,
    int collideConnected,
  ) {
    return _gooJointCreateMouse(
      bodyA,
      bodyB,
      targetX,
      targetY,
      hertz,
      dampingRatio,
      maxForce,
      collideConnected,
    );
  }
